<resources>
    <string name="app_name">Task Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="preference_file_key">preference_file_key_task_planner</string>
    <string name="login_button">LOGIN</string>
    <string name="button_create_account">Create account</string>
    <string name="logo_description">Logo Task Planner</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_slideshow">Slidershow</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="server_error_message">Wrong credentials</string>
</resources>
